# jira-fetch

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
jira_fetch/: cli.py  client.py  config.py  fetcher.py  writer.py
